<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">
    <!-- Function -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_function_caption"/>
    <EditText
        android:id="@+id/etFunction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_function_hint"/>
    <!-- From -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_from_caption"/>
    <EditText
        android:id="@+id/etFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_from_hint"/>
    <!-- To -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_to_caption"/>
    <EditText
        android:id="@+id/etTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_to_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <!-- Build -->
    <Button
        android:id="@+id/btnBuild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/btn_build_text"/>
</LinearLayout>
